--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,2 +1,5 @@
+$ap-wrapper-max-width: 1150px;
 $footer-height: 80px;
 $footer-height-mobile: 60px;
+$footer-height-mobile: 60px;
+$sidebar-width: 60px;
