--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,4 @@
-@import 'base/develop-mode';
+//@import 'base/develop-mode';
 @import 'base/reset';
 @import 'base/variables';
 @import 'base/breakpoints';
