--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,12 +1,3 @@
-.ap-wrapper {
-  border: 1px solid yellowgreen; }
-
-main {
-  border: 1px solid red; }
-
-.footer {
-  border: 1px solid green; }
-
 * {
   padding: 0;
   margin: 0;
@@ -23,10 +14,31 @@ a {
   height: calc(100vh - 80px); }
 
 .footer {
-  height: 80px; }
+  height: 80px;
+  /*display: flex;
+  justify-content: space-around;
+  align-items: flex-start;*/ }
+  .footer ul {
+    display: flex; }
+    .footer ul li {
+      width: 20%;
+      height: 80px;
+      padding-top: 10px;
+      display: flex;
+      justify-content: space-around; }
+      .footer ul li a {
+        height: min-content;
+        font-size: 14px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column; }
+        .footer ul li a :first-child {
+          margin: auto;
+          font-size: 20px; }
 
 .ap-wrapper {
   margin: auto;
+  height: 100vh;
   overflow: hidden; }
   @media (min-width: 1201px) {
     .ap-wrapper {
@@ -35,14 +47,15 @@ a {
 @media (min-width: 1201px) {
   .main {
     float: left;
-    width: calc(100% -  60px);
+    width: calc(100% -  120px);
     height: 100vh; } }
-
-@media (max-width: 720px) {
-  .footer {
-    height: 60px; } }
 
 @media (min-width: 1201px) {
   .footer {
-    width: 60px;
-    float: left; } }
+    float: left;
+    width: 120px;
+    height: 100%; }
+    .footer ul {
+      flex-direction: column; }
+      .footer ul li {
+        width: 100%; } }
