--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,5 +1,3 @@
-$ap-wrapper-max-width: 1150px;
+$ap-max-width: 1150px;
 $footer-height: 80px;
-$footer-height-mobile: 60px;
-$footer-height-mobile: 60px;
-$sidebar-width: 60px;
+$sidebar-width: 120px;
