--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,8 @@
 @import 'base/variables';
 @import 'base/breakpoints';
 
+@import 'components/ap-wrapper';
 @import 'components/main';
+@import 'components/task-edit-block';
 @import 'components/footer';
 @import 'components/media';
