--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,9 +3,6 @@
   margin: 0;
   box-sizing: border-box; }
 
-ul {
-  list-style: none; }
-
 a {
   text-decoration: none;
   color: 78829d; }
@@ -20,7 +17,10 @@ a {
       font-size: 16px; } }
   @media (min-width: 1201px) {
     .ap-wrapper {
-      width: 1150px; } }
+      width: 800px; } }
+
+.hidden {
+  display: none; }
 
 .main {
   height: calc(100% - 65px); }
@@ -82,11 +82,6 @@ a {
 .task-edit__type-case {
   width: 8%; }
 
-.task-edit__task-header {
-  margin-top: 3vw;
-  display: flex;
-  justify-content: center; }
-
 .task-edit__buttons-wrapper {
   display: flex;
   justify-content: space-around; }
@@ -112,6 +107,13 @@ a {
         flex-direction: column; }
         .footer ul li a :first-child {
           margin: auto; }
+  .footer-button {
+    width: 60%;
+    height: min-content;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center; }
 
 @media (min-width: 721px) {
   .main .day-header {
