--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,14 +1,14 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 ul { 
-    list-style: none; 
+  //list-style: none; 
 }
 
 a {
-    text-decoration: none;
-    color: 78829d;
+  text-decoration: none;
+  color: 78829d;
 }
