--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -1,6 +1,6 @@
 .main {
   @include breakpoint(tablet) {
-    .day-header__date-logo, .task {
+    .task {
       font-size: $base-font-size;
     }
   }
