made adding task

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -85,8 +85,7 @@ a {
   width: 8%; }
 
 .task-edit__task-header {
-  width: 100%;
-  margin-bottom: 2vw; }
+  width: 100%; }
 
 .task-edit__task-details {
   width: 100%;
