aded task deleating and fixed bugs

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -53,7 +53,8 @@ a {
 
 .task {
   margin-bottom: 6px;
-  border: 1px solid black; }
+  border: 1px solid #17a2b8;
+  border-radius: .25rem; }
   .task__task-main {
     padding-left: 3px;
     display: flex; }
@@ -62,19 +63,22 @@ a {
   .task__task-date {
     width: 10%; }
   .task__task-header {
-    width: 70%; }
+    width: 64%;
+    overflow: hidden;
+    text-overflow: ellipsis; }
   .task__task-type {
     width: 5%;
     text-align: center; }
   .task__task-edit-button {
-    width: 5%;
+    width: 8%;
     text-align: center; }
   .task__task-deleat-button {
-    width: 5%;
+    width: 8%;
     text-align: center; }
   .task__task-details {
     padding-left: 3px;
-    border-top: 1px solid gray; }
+    border-top: 1px solid #17a2b8;
+    overflow: auto; }
 
 .task-edit__top-panel {
   display: flex;
