--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -80,6 +80,12 @@ a {
     border-top: 1px solid #17a2b8;
     overflow: auto; }
 
+.background--grey {
+  background-color: #f4f4f4; }
+
+.background--green {
+  background-color: #e5ffea; }
+
 .task-edit__top-panel {
   display: flex;
   justify-content: space-between;
