--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,5 @@
 //@import 'base/develop-mode';
-@import "node_modules/bootstrap/scss/bootstrap";
+@import "node_modules/bootstrap/scss/bootstrap.scss";
 @import 'base/reset';
 @import 'base/variables';
 @import 'base/breakpoints';
